// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DesktopImage /> should render css 1`] = `
.c0 {
  display: block;
  margin: 20px;
  border: 3px solid #D9D9D9;
}

@media (max-width:48em) {
  .c0 {
    display: none;
  }
}

<RespImg
  className="c0"
  margin="20px"
/>
`;

exports[`<DesktopImage /> should render css 2`] = `
.c0 {
  display: block;
  margin: 30px auto;
  border: 2px dotted green;
}

@media (max-width:48em) {
  .c0 {
    display: none;
  }
}

<RespImg
  border="2px dotted green"
  className="c0"
/>
`;

exports[`<DesktopImage /> should render its css w/ props border 1`] = `
.c0 {
  width: 100%;
  max-width: 100%;
}

<img
  className="c0"
/>
`;

exports[`<DesktopImage /> should render its css w/ props margin 1`] = `
.c0 {
  width: 100%;
  max-width: 100%;
}

<img
  className="c0"
/>
`;

exports[`<MobileImage /> should render css 1`] = `
.c0 {
  display: block;
  margin: 20px;
  border: 3px solid #D9D9D9;
}

@media (min-width:48.0625em) {
  .c0 {
    display: none;
  }
}

<RespImg
  className="c0"
  margin="20px"
/>
`;

exports[`<MobileImage /> should render css 2`] = `
.c0 {
  display: block;
  margin: 30px auto;
  border: 2px dotted green;
}

@media (min-width:48.0625em) {
  .c0 {
    display: none;
  }
}

<RespImg
  border="2px dotted green"
  className="c0"
/>
`;

exports[`<MobileImage /> should render its css w/ props border 1`] = `
.c0 {
  width: 100%;
  max-width: 100%;
}

<img
  className="c0"
/>
`;

exports[`<MobileImage /> should render its css w/ props margin 1`] = `
.c0 {
  width: 100%;
  max-width: 100%;
}

<img
  className="c0"
/>
`;

exports[`<RespImg /> should render css 1`] = `
.c0 {
  width: 100%;
  max-width: 60%;
}

<img
  className="c0"
/>
`;

exports[`<RespImg /> should render its css w/ props maxWidth 1`] = `
.c0 {
  width: 100%;
  max-width: 30%;
}

<img
  className="c0"
/>
`;
